# agentic-rag-platform

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE.md  Makefile  README.md  port_forward.sh  pyproject.toml
rag_api/app/: rag_pipeline.py
terraform/: .terraform.lock.hcl  main.tf  ollama.tf  providers.tf  rag-platform-config
terraform/k8s/: ollama.yaml
terraform/modules/kubernetes/: main.tf  terraform.tf
terraform/modules/ollama/: deployment.yaml  main.tf
terraform/modules/qdrant/: main.tf
