[project]
name = "agentic-rag-platform"
version = "0.1.0"
description = "Agentic RAG platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "langchain>=0.3.28",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.39.0",
]
